--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dompdf/dompdf": "^3.1",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "milon/barcode": "^11.0",
+        "spatie/laravel-pdf": "^1.5",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
