--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
     "require": {
         "php": "^8.2",
         "dompdf/dompdf": "^3.1",
+        "filament/filament": "^3.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "milon/barcode": "^11.0",
+        "roach-php/laravel": "^3.1",
         "spatie/laravel-pdf": "^1.5",
         "tightenco/ziggy": "^2.0"
     },
@@ -42,7 +44,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
